# pim-ui

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tray-popover.html  tsconfig.json  vite.config.ts  vitest.config.ts
.design/: CLAUDE.md
.github/: dependabot.yml  settings.yml
.github/workflows/: check.yml  codeql-analysis.yml  codeql.yml  dependency-review.yml  desktop-release.yml  quality-and-security.yml  release.yml  sbom.yml  secret-scanning.yml  secret_scanning.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
docs/: COPY.md  README.md  RESILIENCE-LAB.md  SECURITY.md  UX-PLAN.md  creator-brief.md
docs/proposals/: upstream-pim-config-fmt.md
docs/research/: kernel-study.md  macos-bluetooth-auto-pairing.md  ux-references.md
pim-daemon-stub/: Cargo.toml
pim-daemon-stub/src/: main.rs
scripts/: audit-copy.mjs  build-bt-rfcomm-sidecar.sh  fetch-daemon.sh  lab-tri-node-collect.sh  lab-tri-node-report.sh  pre-pr-check.sh  pre-pr.sh  prepare-release.sh  sync-brand.sh
src/: App.tsx  app-root.tsx  globals.css  main.tsx  test-setup.ts  tray-popover-main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/binaries/: .gitkeep  README.md
src-tauri/capabilities/: default.json  tray-popover.json
src-tauri/icons/: icon.icns
src-tauri/src/: bluetooth_rfcomm.rs  lib.rs  main.rs  tray.rs
src-tauri/src/daemon/: config_path.rs  config_validation.rs  data_dir.rs  default_config.rs  events.rs  jsonrpc.rs  mod.rs  remote.rs  sidecar.rs  socket_path.rs  state.rs
src-tauri/src/rpc/: bt_nap.rs  commands.rs  mod.rs
src/components/: command-palette.tsx
src/hooks/: use-active-screen.ts  use-add-peer.ts  use-app-mode.ts  use-bluetooth-rfcomm.ts  use-broadcast.ts  use-bt-nap-preflight.ts  use-command-palette.ts  use-config-bootstrap.ts  use-config-validation.ts  use-conversations.ts  use-daemon-state.test.ts  use-daemon-state.ts  use-dirty-sections.ts  use-discovered-peers.ts  use-discovered.ts  use-gated-navigation.ts  use-gateway-notifications.ts  use-gateway-preflight.ts  use-gateway-status.ts  use-invite-peer.ts  use-log-filters.ts  use-logs-stream.ts  use-message-history.ts  use-pair-approval.ts  use-peer-detail.ts  use-peer-troubleshoot-log.ts  use-peers.ts  use-pending-restart.ts  use-raw-toml-save.ts  use-relay-contribution.spec.ts  use-relay-contribution.ts  use-remove-peer.ts  use-route-table.test.ts  use-route-table.ts  use-routing.ts  use-save-registry.ts  use-section-raw-wins.ts  use-section-save.ts  use-settings-config.ts  use-sidebar-counts.ts  (+5 more)
(+307 files in other folders)
