[package]
name = "pim-daemon-stub"
version = "0.0.1"
edition = "2021"
publish = false
description = "Dev-mode RPC stub for pim-ui — satisfies docs/RPC.md so the UI can develop end-to-end while the kernel JSON-RPC server is unmerged upstream."

[[bin]]
name = "pim-daemon-stub"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
