[package]
name = "pim-ui"
version = "0.0.1"
description = "Desktop + mobile UI for the pim proximity mesh daemon"
authors = ["Astervia"]
license = "MIT"
repository = "https://github.com/Astervia/pim-ui"
edition = "2021"
rust-version = "1.77"

[lib]
name = "pim_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
async-trait = "0.1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
# Canonical config schema published by Astervia/proximity-internet-mesh.
# Used for: (a) round-trip smoke-test in default_config.rs to detect schema
# drift in CI, (b) client-side TOML validation via the `config_validate`
# Tauri command so the Settings tab can surface schema errors before the
# daemon REJECTs the save.
pim-core = "0.1.4"

[target.'cfg(unix)'.dependencies]
# Phase 7 spike: gethostname(3) for the BT sidecar's local-name default
# without pulling in a separate `hostname` crate.
libc = "0.2"

# `tracing` was previously direct; we use the `log` crate exclusively now
# because tauri-plugin-log only captures `log` output. Keeping it removed
# avoids the easy mistake of writing `tracing::info!` and silently losing
# it.

[dev-dependencies]
tempfile = "3"
toml = "0.8"

[features]
# this feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
